# fastapi-starter

./: .env.example  .gitignore  README.md  enx_example.txt  pyproject.toml
app/: main.py
app/api/v1/: auth_router.py  health_check.py  room_router.py  task_router.py
app/controllers/: auth_controller.py  room_controller.py  task_controller.py
app/core/: config.py  environment.py
app/crud/: user_crud.py
app/db/: database.py
app/middlewares/: auth_middleware.py
app/models/: login_session.py  notification.py  room.py  task.py  user.py  user_room.py
app/schemas/: user_schema.py
app/schemas/response/: message_response.py
app/schemas/room/: add_room_member.py  create_room_schema.py  join_room.py  remove_member.py  room_schema.py  update_room_schema.py
app/schemas/task/: assign_task.py  create_task.py  task.py  update_status.py  update_task.py
app/schemas/user/: login_schema.py  signup_schema.py  token_schema.py  user_schema.py
app/services/: room_service.py  task_service.py  user_service.py
app/utils/: password.py
app/utils/path/: auth_path.py  room_path.py
